--- a/ArtistSearch/ArtistSearch/MainWindow.xaml
+++ b/ArtistSearch/ArtistSearch/MainWindow.xaml
@@ -7,39 +7,76 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="900">
     <TabControl>
-        <TabItem Header="Search">
+        <TabItem Header="Search Artist" Height="30">
             <Grid Margin="10">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition/>
+                    <RowDefinition/>
                 </Grid.RowDefinitions>
-                <StackPanel Grid.Column="0" Grid.Row="0" VerticalAlignment="Center">
 
-                    <Label Content="Artist Search" FontSize="30" HorizontalAlignment="Center"/>
-
-                    <StackPanel Orientation="Horizontal">
-                        <Label Content="Enter Artist:" FontSize="14"/>
-                        <TextBox Name="TbxEnterArtist" TextWrapping="Wrap" Width="120" VerticalAlignment="Center"/>
-                        <Button x:Name="BtnSearchArtist" Content="Search" VerticalAlignment="Center" Width="60" Margin="10,0,0,0" Click="BtnSearchArtist_Click"/>
-                    </StackPanel>
-
-                    <TextBlock Name="TbkErrorOutput" TextWrapping="Wrap" FontSize="16"/>
-
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="Enter Artist:" FontSize="14"/>
+                    <TextBox Name="TbxEnterArtist" TextWrapping="Wrap" Width="120" VerticalAlignment="Center"/>
+                    <Button x:Name="BtnSearchArtist" Content="Search" VerticalAlignment="Center" Width="60" Margin="10,0,0,0" Click="BtnSearchArtist_Click"/>
                 </StackPanel>
-                <ListBox Name="LbxMatchingArtists" Grid.Row="1" Grid.Column="0" Grid.RowSpan="2" Margin="10" SelectionChanged="LbxMatchingArtists_SelectionChanged"/>
-                <Label Content="Albums" FontSize="30" HorizontalAlignment="Center" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center"/>
-                <ListBox Name="LbxMatchingAlbums" Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Margin="10" SelectionChanged="LbxMatchingAlbums_SelectionChanged"/>
-                <Label Content="Songs" FontSize="30" HorizontalAlignment="Center" Grid.Row="0" Grid.Column="2" VerticalAlignment="Center"/>
-                <ListBox Name="LbxMatchingSongs" Grid.Row="1" Grid.Column="2" Grid.RowSpan="2" Margin="10"/>
+
+                <Label Content="Artist" FontSize="30" Grid.Row="1" HorizontalAlignment="Center"/>
+                <ListBox Name="LbxMatchingArtists" Grid.Row="2" Grid.Column="0" Grid.RowSpan="2" Margin="10" SelectionChanged="LbxMatchingArtists_SelectionChanged"/>
+
+                <TextBlock Name="TbkErrorOutput" TextWrapping="Wrap" FontSize="16" Grid.Column="1" Grid.ColumnSpan="2"/>
+
+                <Label Content="Albums" FontSize="30" HorizontalAlignment="Center" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center"/>
+                <ListBox Name="LbxMatchingAlbums" Grid.Row="2" Grid.Column="1" Grid.RowSpan="2" Margin="10" SelectionChanged="LbxMatchingAlbums_SelectionChanged"/>
+
+                <Label Content="Songs" FontSize="30" HorizontalAlignment="Center" Grid.Row="1" Grid.Column="2" VerticalAlignment="Center"/>
+                <ListBox Name="LbxMatchingSongs" Grid.Row="2" Grid.Column="2" Grid.RowSpan="2" Margin="10"/>
             </Grid>
         </TabItem>
-        <TabItem Header="Add Artist"></TabItem>
-        <TabItem Header="Edit Artist"></TabItem>
+        <TabItem Header="Add/Edit Artist">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition/>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="40"/>
+
+                </Grid.RowDefinitions>
+                <Label Content="Artist Info" FontSize="30" HorizontalAlignment="Center"/>
+                <ListBox Name="lbxAddArtists" Grid.Row="1" Margin="5"/>
+                <StackPanel Grid.Row="2" Orientation="Horizontal">
+                    <Label Content="Artist Name:" VerticalAlignment="Center"/>
+                    <TextBox Name="tbxAddArtistName" Margin="5" Width="200"/>
+                </StackPanel>
+                <Button Name="btnAddArtist" Content="Create new artist" Grid.Row="3" Margin="5" Width="200"/>
+
+                <Label Content="Artist Albums" FontSize="30" HorizontalAlignment="Center" Grid.Column="1"/>
+                <ListBox Name="lbxAddArtistAlbums" Grid.Row="1" Grid.Column="1" Margin="5"/>
+                <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1">
+                    <Label Content="Album Name:" VerticalAlignment="Center"/>
+                    <TextBox Margin="5" Width="200"/>
+                </StackPanel>
+                <Button Name="btnAddAlbum" Content="Add album to artist" Grid.Row="3" Grid.Column="1" Margin="5" Width="200"/>
+
+                <Label Content="Artist Songs" FontSize="30" HorizontalAlignment="Center" Grid.Column="2"/>
+                <ListBox Name="lbxAddedSongs" Grid.Row="1" Grid.Column="2" Margin="5"/>
+                <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="2">
+                    <Label Content="Enter Song:" VerticalAlignment="Center"/>
+                    <TextBox Name="tbxAddSong" Margin="5" Width="200"/>
+                </StackPanel>
+                <Button Name="BtnAddSong" Content="Add song to selected album" Margin="5" Width="200" Grid.Row="3" Grid.Column="2"/>
+            </Grid>
+        </TabItem>
     </TabControl>
 </Window>
