--- a/ArtistSearch/ArtistSearch/MainWindow.xaml
+++ b/ArtistSearch/ArtistSearch/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ArtistSearch"
         mc:Ignorable="d"
+        Loaded="Window_Loaded"
         Title="MainWindow" Height="450" Width="900">
     <TabControl>
         <TabItem Header="Search Artist" Height="30">
@@ -30,7 +31,7 @@
                 <Label Content="Artist" FontSize="30" Grid.Row="1" HorizontalAlignment="Center"/>
                 <ListBox Name="LbxMatchingArtists" Grid.Row="2" Grid.Column="0" Grid.RowSpan="2" Margin="10" SelectionChanged="LbxMatchingArtists_SelectionChanged"/>
 
-                <TextBlock Name="TbkErrorOutput" TextWrapping="Wrap" FontSize="16" Grid.Column="1" Grid.ColumnSpan="2"/>
+                <TextBlock Name="TbkErrorOutput" TextWrapping="Wrap" FontSize="16" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Center"/>
 
                 <Label Content="Albums" FontSize="30" HorizontalAlignment="Center" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center"/>
                 <ListBox Name="LbxMatchingAlbums" Grid.Row="2" Grid.Column="1" Grid.RowSpan="2" Margin="10" SelectionChanged="LbxMatchingAlbums_SelectionChanged"/>
